<resources>
    <string name="app_name">Capstone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="register_short">Register</string>
    <string name="verify_password">Verify Password</string>
    <string name="allEvents">All Events</string>
    <string name="myEvents">My Events</string>
    <string name="olympic_scheduler">Olympic Scheduler</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="item_2">item2</string>
    <string name="item_1">item2</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="time">Time</string>
    <string name="details">Details</string>
    <string name="keyword">Keyword</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>